--- a/sobremi.html
+++ b/sobremi.html
@@ -5,10 +5,10 @@
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
     <meta name ="author" content ="Sergio Truébano Robles" />
-    <meta name ="description" content ="Inicio del Escritorio Virtual" />
+    <meta name ="description" content ="aquí cada documento debe tener la descripción del contenido concreto del mismo" />
     <meta name ="keywords" content ="aquí cada documento debe tener la lista de las palabras clave del mismo separadas por comas" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
-    <title>Inicio</title>
+    <title>Sobre mi</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
@@ -28,7 +28,7 @@
     </nav>
 
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>Inicio</h1>
+    <h1>Sobre mi</h1>
     <p>En desarrollo</p>
 
 </body>
