--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name ="description" content ="Inicio del Escritorio Virtual" />
     <meta name ="keywords" content ="aquí cada documento debe tener la lista de las palabras clave del mismo separadas por comas" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
-    <title>Inicio</title>
+    <title>Escritorio Virtual - Inicio</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
