--- a/meteorologia.html
+++ b/meteorologia.html
@@ -8,7 +8,7 @@
     <meta name ="description" content ="aquí cada documento debe tener la descripción del contenido concreto del mismo" />
     <meta name ="keywords" content ="aquí cada documento debe tener la lista de las palabras clave del mismo separadas por comas" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
-    <title>Meteorología</title>
+    <title>Escritorio Virtual - Meteorología</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
@@ -28,7 +28,7 @@
     </nav>
 
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>Meteorología en Gijón</h1>
+    <h1>Meteorología</h1>
     <p>En desarrollo</p>
 
 </body>
