--- a/agenda.html
+++ b/agenda.html
@@ -19,15 +19,17 @@
 <body>
 
     <!--Menú de navegación-->
-    <nav>
-        <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
-        <a href="sobremi.html" accesskey="S" tabindex="2">Sobre mi</a>
-        <a href="noticias.html" accesskey="N" tabindex="3">Noticias</a>
-        <a href="agenda.html" accesskey="A" tabindex="4">Agenda</a>
-        <a href="meteorologia.html" accesskey="M" tabindex="5">Meteorología</a>
-        <a href="viajes.html" accesskey="V" tabindex="6">Viajes</a>
-        <a href="Juegos.html" accesskey="J" tabindex="7">Juegos</a>
-    </nav>
+    <header>
+        <nav>
+            <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
+            <a href="sobremi.html" accesskey="S" tabindex="2">Sobre mi</a>
+            <a href="noticias.html" accesskey="N" tabindex="3">Noticias</a>
+            <a href="agenda.html" accesskey="A" tabindex="4">Agenda</a>
+            <a href="meteorologia.html" accesskey="M" tabindex="5">Meteorología</a>
+            <a href="viajes.html" accesskey="V" tabindex="6">Viajes</a>
+            <a href="Juegos.html" accesskey="J" tabindex="7">Juegos</a>
+        </nav>
+    </header>
 
     <!-- Datos con el contenidos que aparece en el navegador -->
     <h1>Primer sitio web</h1>
