--- a/sobremi.html
+++ b/sobremi.html
@@ -104,190 +104,187 @@
             <p>La siguiente tabla expresa la media de las temperaturas (en grados Celsius) en Gijón de los últimos 10 años:</p>
             <table id="temperaturas">
                 <caption>Tabla de temperaturas medias por meses desde 2013 en Gijón</caption>
-                <thead>
-                    <tr>
-                        <th>Año\Mes</th> 
-                        <th>Enero</th>
-                        <th>Febrero</th>
-                        <th>Marzo</th>
-                        <th>Abril</th>
-                        <th>Mayo</th>
-                        <th>Junio</th>
-                        <th>Julio</th>
-                        <th>Agosto</th>
-                        <th>Septiembre</th>
-                        <th>Octubre</th>
-                        <th>Noviembre</th>
-                        <th>Diciembre</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th>2013</th>
-                            <td>11°</td>
-                            <td>11°</td>
-                            <td>12°</td>
-                            <td>13°</td>
-                            <td>14°</td>
-                            <td>16°</td>
-                            <td>18°</td>
-                            <td>19°</td>
-                            <td>18°</td>
-                            <td>16°</td>
-                            <td>13°</td>
-                            <td>11°</td>
-                    </tr>
-                    <tr>
-                        <th>2014</th>
-                            <td>11°</td>
-                            <td>11°</td>
-                            <td>12°</td>
-                            <td>13°</td>
-                            <td>13°</td>
-                            <td>16°</td>
-                            <td>17°</td>
-                            <td>18°</td>
-                            <td>17°</td>
-                            <td>16°</td>
-                            <td>13°</td>
-                            <td>10°</td>
-                    </tr>
-                    <tr>
-                        <th>2015</th>
-                            <td>11°</td>
-                            <td>10°</td>
-                            <td>12°</td>
-                            <td>13°</td>
-                            <td>15°</td>
-                            <td>17°</td>
-                            <td>18°</td>
-                            <td>19°</td>
-                            <td>18°</td>
-                            <td>15°</td>
-                            <td>13°</td>
-                            <td>12°</td>
-                    </tr>
-                    <tr>
-                        <th>2016</th>
-                            <td>11°</td>
-                            <td>11°</td>
-                            <td>11°</td>
-                            <td>12°</td>
-                            <td>13°</td>
-                            <td>14°</td>
-                            <td>16°</td>
-                            <td>18°</td>
-                            <td>17°</td>
-                            <td>15°</td>
-                            <td>13°</td>
-                            <td>11°</td>
-                    </tr>
-                    <tr>
-                        <th>2017</th>
-                            <td>11°</td>
-                            <td>11°</td>
-                            <td>12°</td>
-                            <td>13°</td>
-                            <td>15°</td>
-                            <td>17°</td>
-                            <td>19°</td>
-                            <td>17°</td>
-                            <td>16°</td>
-                            <td>14°</td>
-                            <td>13°</td>
-                            <td>11°</td>
-                    </tr>
-                    <tr>
-                        <th>2018</th>
-                            <td>11°</td>
-                            <td>11°</td>
-                            <td>12°</td>
-                            <td>13°</td>
-                            <td>14°</td>
-                            <td>16°</td>
-                            <td>18°</td>
-                            <td>19°</td>
-                            <td>17°</td>
-                            <td>15°</td>
-                            <td>13°</td>
-                            <td>12°</td>
-                    </tr>
-                    <tr>
-                        <th>2019</th>
-                            <td>7°</td>
-                            <td>10°</td>
-                            <td>11°</td>
-                            <td>12°</td>
-                            <td>14°</td>
-                            <td>16°</td>
-                            <td>17°</td>
-                            <td>19°</td>
-                            <td>17°</td>
-                            <td>16°</td>
-                            <td>14°</td>
-                            <td>12°</td>
-                    </tr>
-                    <tr>
-                        <th>2020</th>
-                            <td>11°</td>
-                            <td>11°</td>
-                            <td>12°</td>
-                            <td>13°</td>
-                            <td>15°</td>
-                            <td>16°</td>
-                            <td>18°</td>
-                            <td>20°</td>
-                            <td>17°</td>
-                            <td>15°</td>
-                            <td>14°</td>
-                            <td>11°</td>
-                    </tr>
-                    <tr>
-                        <th>2021</th>
-                            <td>9°</td>
-                            <td>12°</td>
-                            <td>12°</td>
-                            <td>13°</td>
-                            <td>15°</td>
-                            <td>16°</td>
-                            <td>18°</td>
-                            <td>20°</td>
-                            <td>17°</td>
-                            <td>15°</td>
-                            <td>13°</td>
-                            <td>12°</td>
-                    </tr>
-                    <tr>
-                        <th>2022</th>
-                            <td>11°</td>
-                            <td>10°</td>
-                            <td>12°</td>
-                            <td>13°</td>
-                            <td>14°</td>
-                            <td>16°</td>
-                            <td>19°</td>
-                            <td>20°</td>
-                            <td>18°</td>
-                            <td>17°</td>
-                            <td>14°</td>
-                            <td>12°</td>
-                    </tr>
-                    <tr>
-                        <th>2023</th>
-                            <td>10°</td>
-                            <td>11°</td>
-                            <td>12°</td>
-                            <td>13°</td>
-                            <td>15°</td>
-                            <td>17°</td>
-                            <td>19°</td>
-                            <td>22°</td>
-                            <td>21°</td>
-                            <td>X</td>
-                            <td>X</td>
-                            <td>X</td>
-                    </tr>
-                </tbody>
+                <tr>
+                    <th id="año">Año</th> <!--Esquina superior izquierda -> Preguntar por scope-->
+
+                    <th scope="col" id="enero">Enero</th>
+                    <th scope="col" id="febrero">Febrero</th>
+                    <th scope="col" id="marzo">Marzo</th>
+                    <th scope="col" id="abril">Abril</th>
+                    <th scope="col" id="mayo">Mayo</th>
+                    <th scope="col" id="junio">Junio</th>
+                    <th scope="col" id="julio">Julio</th>
+                    <th scope="col" id="agosto">Agosto</th>
+                    <th scope="col" id="septiembre">Septiembre</th>
+                    <th scope="col" id="octubre">Octubre</th>
+                    <th scope="col" id="noviembre">Noviembre</th>
+                    <th scope="col" id="diciembre">Diciembre</th>
+                </tr>
+                <tr>
+                    <th scope="row" id="2013" headers="año">2013</th>
+                        <td headers="2013 enero"></td>11°</td>
+                        <td headers="2013 febrero">11°</td>
+                        <td headers="2013 marzo">12°</td>
+                        <td headers="2013 abril">13°</td>
+                        <td headers="2013 mayo">14°</td>
+                        <td headers="2013 junio">16°</td>
+                        <td headers="2013 julio">18°</td>
+                        <td headers="2013 agosto">19°</td>
+                        <td headers="2013 septiembre">18°</td>
+                        <td headers="2013 octubre">16°</td>
+                        <td headers="2013 noviembre">13°</td>
+                        <td headers="2013 diciembre"></td>11°</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="2014" headers="año">2014</th>
+                        <td headers="2014 enero">11°</td>
+                        <td headers="2014 febrero">11°</td>
+                        <td headers="2014 marzo">12°</td>
+                        <td headers="2014 abril">13°</td>
+                        <td headers="2014 mayo">13°</td>
+                        <td headers="2014 junio">16°</td>
+                        <td headers="2014 julio">17°</td>
+                        <td headers="2014 agosto">18°</td>
+                        <td headers="2014 septiembre">17°</td>
+                        <td headers="2014 octubre">16°</td>
+                        <td headers="2014 noviembre">13°</td>
+                        <td headers="2014 diciembre">10°</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="2015" headers="año">2015</th>
+                        <td headers="2015 enero">11°</td>
+                        <td headers="2015 febrero">10°</td>
+                        <td headers="2015 marzo">12°</td>
+                        <td headers="2015 abril">13°</td>
+                        <td headers="2015 mayo">15°</td>
+                        <td headers="2015 junio">17°</td>
+                        <td headers="2015 julio">18°</td>
+                        <td headers="2015 agosto">19°</td>
+                        <td headers="2015 septiembre">18°</td>
+                        <td headers="2015 octubre">15°</td>
+                        <td headers="2015 noviembre">13°</td>
+                        <td headers="2015 diciembre">12°</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="2016" headers="año">2016</th>
+                        <td headers="2016 enero">11°</td>
+                        <td headers="2016 febrero">11°</td>
+                        <td headers="2016 marzo">11°</td>
+                        <td headers="2016 abril">12°</td>
+                        <td headers="2016 mayo">13°</td>
+                        <td headers="2016 junio">14°</td>
+                        <td headers="2016 julio">16°</td>
+                        <td headers="2016 agosto">18°</td>
+                        <td headers="2016 septiembre">17°</td>
+                        <td headers="2016 octubre">15°</td>
+                        <td headers="2016 noviembre">13°</td>
+                        <td headers="2016 diciembre">11°</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="2017" headers="año">2017</th>
+                        <td headers="2017 enero">11°</td>
+                        <td headers="2017 febrero">11°</td>
+                        <td headers="2017 marzo">12°</td>
+                        <td headers="2017 abril">13°</td>
+                        <td headers="2017 mayo">15°</td>
+                        <td headers="2017 junio">17°</td>
+                        <td headers="2017 julio">19°</td>
+                        <td headers="2017 agosto">17°</td>
+                        <td headers="2017 septiembre">16°</td>
+                        <td headers="2017 octubre">14°</td>
+                        <td headers="2017 noviembre">13°</td>
+                        <td headers="2017 diciembre">11°</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="2018" headers="año">2018</th>
+                        <td headers="2018 enero">11°</td>
+                        <td headers="2018 febrero">11°</td>
+                        <td headers="2018 marzo">12°</td>
+                        <td headers="2018 abril">13°</td>
+                        <td headers="2018 mayo">14°</td>
+                        <td headers="2018 junio">16°</td>
+                        <td headers="2018 julio">18°</td>
+                        <td headers="2018 agosto">19°</td>
+                        <td headers="2018 septiembre">17°</td>
+                        <td headers="2018 octubre">15°</td>
+                        <td headers="2018 noviembre">13°</td>
+                        <td headers="2018 diciembre">12°</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="2019" headers="año">2019</th>
+                        <td headers="2019 enero">7°</td>
+                        <td headers="2019 febrero">10°</td>
+                        <td headers="2019 marzo">11°</td>
+                        <td headers="2019 abril">12°</td>
+                        <td headers="2019 mayo">14°</td>
+                        <td headers="2019 junio">16°</td>
+                        <td headers="2019 julio">17°</td>
+                        <td headers="2019 agosto">19°</td>
+                        <td headers="2019 septiembre">17°</td>
+                        <td headers="2019 octubre">16°</td>
+                        <td headers="2019 noviembre">14°</td>
+                        <td headers="2019 diciembre">12°</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="2020" headers="año">2020</th>
+                        <td headers="2020 enero">11°</td>
+                        <td headers="2020 febrero">11°</td>
+                        <td headers="2020 marzo">12°</td>
+                        <td headers="2020 abril">13°</td>
+                        <td headers="2020 mayo">15°</td>
+                        <td headers="2020 junio">16°</td>
+                        <td headers="2020 julio">18°</td>
+                        <td headers="2020 agosto">20°</td>
+                        <td headers="2020 septiembre">17°</td>
+                        <td headers="2020 octubre">15°</td>
+                        <td headers="2020 noviembre">14°</td>
+                        <td headers="2020 diciembre">11°</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="2021" headers="año">2021</th>
+                        <td headers="2021 enero">9°</td>
+                        <td headers="2021 febrero">12°</td>
+                        <td headers="2021 marzo">12°</td>
+                        <td headers="2021 abril">13°</td>
+                        <td headers="2021 mayo">15°</td>
+                        <td headers="2021 junio">16°</td>
+                        <td headers="2021 julio">18°</td>
+                        <td headers="2021 agosto">20°</td>
+                        <td headers="2021 septiembre">17°</td>
+                        <td headers="2021 octubre">15°</td>
+                        <td headers="2021 noviembre">13°</td>
+                        <td headers="2021 diciembre">12°</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="2022" headers="año">2022</th>
+                        <td headers="2022 enero">11°</td>
+                        <td headers="2022 febrero">10°</td>
+                        <td headers="2022 marzo">12°</td>
+                        <td headers="2022 abril">13°</td>
+                        <td headers="2022 mayo">14°</td>
+                        <td headers="2022 junio">16°</td>
+                        <td headers="2022 julio">19°</td>
+                        <td headers="2022 agosto">20°</td>
+                        <td headers="2022 septiembre">18°</td>
+                        <td headers="2022 octubre">17°</td>
+                        <td headers="2022 noviembre">14°</td>
+                        <td headers="2022 diciembre">12°</td>
+                </tr>
+                <tr>
+                    <th scope="row" id="2023" headers="año">2023</th>
+                        <td headers="2023 enero">10°</td>
+                        <td headers="2023 febrero">11°</td>
+                        <td headers="2023 marzo">12°</td>
+                        <td headers="2023 abril">13°</td>
+                        <td headers="2023 mayo">15°</td>
+                        <td headers="2023 junio">17°</td>
+                        <td headers="2023 julio">19°</td>
+                        <td headers="2023 agosto">22°</td>
+                        <td headers="2023 septiembre">21°</td>
+                        <td headers="2023 octubre">X</td>
+                        <td headers="2023 noviembre">X</td>
+                        <td headers="2023 diciembre">X</td>
+                </tr>
             </table>
 
             <p>Información extraída de la siguiente página Web: <a href="https://es.weatherspark.com/h/y/34995/2023/Datos-hist%C3%B3ricos-meteorol%C3%B3gicos-de-2023-en-Gij%C3%B3n-Espa%C3%B1a#Figures-Temperature">es.weatherspark.es</a></p>
