--- a/juegos.html
+++ b/juegos.html
@@ -28,7 +28,7 @@
     </nav>
 
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>Juegos</h1>
+    <h1>Escritorio Virtual</h1>
     <p>En desarrollo</p>
 
 </body>
