--- a/agenda.html
+++ b/agenda.html
@@ -32,7 +32,7 @@
     </header>
 
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>Primer sitio web</h1>
+    <h1>Escritorio Virtual</h1> 
     <p>¡Hola Mundo! Este es el primer sitio web adaptable y accesible desarrollado cumpliendo los estándares HTML5, CSS3. </p>
 
 </body>
