--- a/sobremi.html
+++ b/sobremi.html
@@ -82,8 +82,10 @@
         
             <h3>Cantantes o grupos musicales favoritos ordenados por preferencia personal:</h3>
                 <picture>
-                    <source media="max-width:200px" >
-                    <img src="multimedia/imagenes/andylucas.jpg" alt="No se ha podido mostrar la foto de Andy & Lucas"/>
+                    <source media="(max-width: 465px)" srcset="multimedia/imagenes/andylucas-216w.png" />
+                    <source media="(max-width: 799px)" srcset="multimedia/imagenes/andylucas-567w.png"/>
+                    <source media="(min-width: 800px)" srcset="multimedia/imagenes/andylucas.png"/>
+                    <img src="multimedia/imagenes/andylucas.png" alt="No se ha podido mostrar la foto de Andy & Lucas"/>
                 </picture>
                 
                 <ol>
