Error validación arreglado

--- a/sobremi.html
+++ b/sobremi.html
@@ -134,7 +134,7 @@
                 </tr>
                 <tr>
                     <th scope="row" id="2013" headers="año">2013</th>
-                        <td headers="2013 enero"></td>11°</td>
+                        <td headers="2013 enero">11°</td>
                         <td headers="2013 febrero">11°</td>
                         <td headers="2013 marzo">12°</td>
                         <td headers="2013 abril">13°</td>
