Error validación arreglado

--- a/sobremi.html
+++ b/sobremi.html
@@ -145,7 +145,7 @@
                         <td headers="2013 septiembre">18°</td>
                         <td headers="2013 octubre">16°</td>
                         <td headers="2013 noviembre">13°</td>
-                        <td headers="2013 diciembre"></td>11°</td>
+                        <td headers="2013 diciembre">11°</td>
                 </tr>
                 <tr>
                     <th scope="row" id="2014" headers="año">2014</th>
