--- a/viajes.html
+++ b/viajes.html
@@ -16,8 +16,9 @@
 
 <body>
 
-    <!--Menú de navegación-->
+    <!--Cabecera-->
     <header>
+        <h1>Escritorio Virtual</h1>
         <nav>
             <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
             <a href="sobremi.html" accesskey="S" tabindex="2">Sobre mi</a>
@@ -30,7 +31,6 @@
     </header>
 
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>Escritorio Virtual</h1>
     <p>En desarrollo</p>
 
 </body>
