--- a/agenda.html
+++ b/agenda.html
@@ -13,6 +13,7 @@
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="icon" href="multimedia/imagenes/favicon.ico">
 
 </head>
 
