P3 css until ex 9

--- a/sobremi.html
+++ b/sobremi.html
@@ -12,6 +12,7 @@
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
     <link rel="icon" href="multimedia/imagenes/favicon.ico" />
 </head>
 
@@ -21,13 +22,29 @@
     <header>
         <h1>Escritorio Virtual</h1>
         <nav>
-            <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
-            <a href="sobremi.html" accesskey="S" tabindex="2">Sobre mi</a>
-            <a href="noticias.html" accesskey="N" tabindex="3">Noticias</a>
-            <a href="agenda.html" accesskey="A" tabindex="4">Agenda</a>
-            <a href="meteorologia.html" accesskey="M" tabindex="5">Meteorología</a>
-            <a href="viajes.html" accesskey="V" tabindex="6">Viajes</a>
-            <a href="juegos.html" accesskey="J" tabindex="7">Juegos</a>
+            <ul>
+                <li>
+                    <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
+                </li>
+                <li>
+                <a href="sobremi.html" accesskey="S" tabindex="2">Sobre mi</a>
+                </li>
+                <li>
+                    <a href="noticias.html" accesskey="N" tabindex="3">Noticias</a>
+                </li>
+                <li>
+                    <a href="agenda.html" accesskey="A" tabindex="4">Agenda</a>
+                </li>
+                <li>
+                    <a href="meteorologia.html" accesskey="M" tabindex="5">Meteorología</a>
+                </li>
+                <li>
+                    <a href="viajes.html" accesskey="V" tabindex="6">Viajes</a>
+                </li>
+                <li>
+                    <a href="juegos.html" accesskey="J" tabindex="7">Juegos</a>
+                </li>
+            </ul>
         </nav>
     </header>
     
@@ -49,11 +66,11 @@
                     </picture>
 
                     <p>
-                        Soy un aficionado a la informática que trata de acercar su realidad a la Web a través de un escritorio virtual.
+                        Bienvenidos: Mi nombre es Sergio Truébano,
+                        soy un estudiante del tercer curso de <a href="https://ingenieriainformatica.uniovi.es/infoacademica/grado">Ingeniería Informática del Software</a> en <a href="https://www.uniovi.es">Universidad de Oviedo</a>.
                     </p>
                     <p>
-                        Bienvenidos a mi carta de presentación: Mi nombre es Sergio Truébano,
-                        soy un estudiante del tercer curso de <a href="https://ingenieriainformatica.uniovi.es/infoacademica/grado">Ingeniería Informática del Software</a> en <a href="https://www.uniovi.es">Universidad de Oviedo</a>.
+                        Soy un aficionado a la informática que trata de acercar su realidad a la Web a través de un escritorio virtual.
                     </p>
                     <p>
                         Me considero una persona agradecida y entusiasta, con ganas de trabajar y de sacar mis proyectos adelante.
