P4 con archivos, reverencia, svg y pdf

--- a/meteorologia.html
+++ b/meteorologia.html
@@ -5,29 +5,46 @@
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
     <meta name ="author" content ="Sergio Truébano Robles" />
-    <meta name ="description" content ="aquí cada documento debe tener la descripción del contenido concreto del mismo" />
+    <meta name ="description" content ="Información personal sobre el autor de la página Web" />
     <meta name ="keywords" content ="aquí cada documento debe tener la lista de las palabras clave del mismo separadas por comas" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
-    <title>Escritorio Virtual - Meteorología</title>
+    <title>Escritorio Virtual - Sobre mi</title>
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
-    <link rel="icon" href="multimedia/imagenes/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
+    <link rel="icon" href="multimedia/imagenes/favicon.ico" />
 </head>
-
+    
 <body>
 
     <!--Cabecera-->
     <header>
         <h1>Escritorio Virtual</h1>
         <nav>
-            <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
-            <a href="sobremi.html" accesskey="S" tabindex="2">Sobre mi</a>
-            <a href="noticias.html" accesskey="N" tabindex="3">Noticias</a>
-            <a href="agenda.html" accesskey="A" tabindex="4">Agenda</a>
-            <a href="meteorologia.html" accesskey="M" tabindex="5">Meteorología</a>
-            <a href="viajes.html" accesskey="V" tabindex="6">Viajes</a>
-            <a href="Juegos.html" accesskey="J" tabindex="7">Juegos</a>
+            <ul>
+                <li>
+                    <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
+                </li>
+                <li>
+                <a href="sobremi.html" accesskey="S" tabindex="2">Sobre mi</a>
+                </li>
+                <li>
+                    <a href="noticias.html" accesskey="N" tabindex="3">Noticias</a>
+                </li>
+                <li>
+                    <a href="agenda.html" accesskey="A" tabindex="4">Agenda</a>
+                </li>
+                <li>
+                    <a href="meteorologia.html" accesskey="M" tabindex="5">Meteorología</a>
+                </li>
+                <li>
+                    <a href="viajes.html" accesskey="V" tabindex="6">Viajes</a>
+                </li>
+                <li>
+                    <a href="juegos.html" accesskey="J" tabindex="7">Juegos</a>
+                </li>
+            </ul>
         </nav>
     </header>
 
