--- a/sobremi.html
+++ b/sobremi.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name ="author" content ="Sergio Truébano Robles" />
     <meta name ="description" content ="Información personal sobre el autor de la página Web" />
-    <meta name ="keywords" content ="escritorio virtual, personal, informática, " />
+    <meta name ="keywords" content ="escritorio virtual, personal, informática" />
     <meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
     <title>Escritorio Virtual - Sobre mi</title>
 
