--- a/juegos.html
+++ b/juegos.html
@@ -24,25 +24,25 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
+                    <a href="index.html" title="Índice" accesskey="I" tabindex="1">Inicio</a>
                 </li>
                 <li>
-                <a href="sobremi.html" accesskey="S" tabindex="2">Sobre mi</a>
+                <a href="sobremi.html" title="Sobre mi" accesskey="S" tabindex="2">Sobre mi</a>
                 </li>
                 <li>
-                    <a href="noticias.html" accesskey="N" tabindex="3">Noticias</a>
+                    <a href="noticias.html" title="Noticias" accesskey="N" tabindex="3">Noticias</a>
                 </li>
                 <li>
-                    <a href="agenda.html" accesskey="A" tabindex="4">Agenda</a>
+                    <a href="agenda.html" title="Agenda" accesskey="A" tabindex="4">Agenda</a>
                 </li>
                 <li>
-                    <a href="meteorologia.html" accesskey="M" tabindex="5">Meteorología</a>
+                    <a href="meteorologia.html" title="Meteorología" accesskey="M" tabindex="5">Meteorología</a>
                 </li>
                 <li>
-                    <a href="viajes.html" accesskey="V" tabindex="6">Viajes</a>
+                    <a href="viajes.html" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
                 </li>
                 <li>
-                    <a href="juegos.html" accesskey="J" tabindex="7">Juegos</a>
+                    <a href="juegos.html" title="Juegos" accesskey="J" tabindex="7">Juegos</a>
                 </li>
             </ul>
         </nav>
