--- a/sobremi.html
+++ b/sobremi.html
@@ -24,25 +24,25 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html" accesskey="I" tabindex="1">Inicio</a>
+                    <a href="index.html" title="Índice" accesskey="I" tabindex="1">Inicio</a>
                 </li>
                 <li>
-                <a href="sobremi.html" accesskey="S" tabindex="2">Sobre mi</a>
+                <a href="sobremi.html" title="Sobre mi" accesskey="S" tabindex="2">Sobre mi</a>
                 </li>
                 <li>
-                    <a href="noticias.html" accesskey="N" tabindex="3">Noticias</a>
+                    <a href="noticias.html" title="Noticias" accesskey="N" tabindex="3">Noticias</a>
                 </li>
                 <li>
-                    <a href="agenda.html" accesskey="A" tabindex="4">Agenda</a>
+                    <a href="agenda.html" title="Agenda" accesskey="A" tabindex="4">Agenda</a>
                 </li>
                 <li>
-                    <a href="meteorologia.html" accesskey="M" tabindex="5">Meteorología</a>
+                    <a href="meteorologia.html" title="Meteorología" accesskey="M" tabindex="5">Meteorología</a>
                 </li>
                 <li>
-                    <a href="viajes.html" accesskey="V" tabindex="6">Viajes</a>
+                    <a href="viajes.html" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
                 </li>
                 <li>
-                    <a href="juegos.html" accesskey="J" tabindex="7">Juegos</a>
+                    <a href="juegos.html" title="Juegos" accesskey="J" tabindex="7">Juegos</a>
                 </li>
             </ul>
         </nav>
@@ -67,7 +67,7 @@
 
                     <p>
                         Bienvenidos: Mi nombre es Sergio Truébano,
-                        soy un estudiante del tercer curso de <a href="https://ingenieriainformatica.uniovi.es/infoacademica/grado">Ingeniería Informática del Software</a> en <a href="https://www.uniovi.es">Universidad de Oviedo</a>.
+                        soy un estudiante del tercer curso de <a href="https://ingenieriainformatica.uniovi.es/infoacademica/grado">Ingeniería Informática del Software</a> en <a href="https://www.uniovi.es" title="Página Web de la Universidad de Oviedo">Universidad de Oviedo</a>.
                     </p>
                     <p>
                         Soy un aficionado a la informática que trata de acercar su realidad a la Web a través de un escritorio virtual.
@@ -142,7 +142,7 @@
             <section>
                 <h3>Asignaturas que más me han gusatdo hasta ahora del grado en Ingeniería Informática del Software</h3>
                     <p>Todas las asignaturas relaccionadas con mi grado se pueden ver en el 
-                        <a href="https://sies.uniovi.es/ofe-pod-jsf/web/oferta/seccion-5.faces">plan de estudios</a> de la Universidad de Oviedo</p>
+                        <a href="https://sies.uniovi.es/ofe-pod-jsf/web/oferta/seccion-5.faces" title="SIES: Plan de estudios para grado en Ingeniería Informática del Software">plan de estudios</a> de la Universidad de Oviedo</p>
                     <dl>
                         <dt>Comunicación Persona Máquina</dt>
                             <dd>Interfaces en Java usando Swing y aplicando: usabilidad, adaptabilidad y accesibilidad</dd>
@@ -212,7 +212,7 @@
                 </tr>
             </table>
 
-            <p>Información extraída de la siguiente página Web: <a href="https://es.weatherspark.com/h/y/34995/2023/Datos-hist%C3%B3ricos-meteorol%C3%B3gicos-de-2023-en-Gij%C3%B3n-Espa%C3%B1a#Figures-Temperature">es.weatherspark.es</a></p>
+            <p>Información extraída de la siguiente página Web: <a href="https://es.weatherspark.com/h/y/34995/2023/Datos-hist%C3%B3ricos-meteorol%C3%B3gicos-de-2023-en-Gij%C3%B3n-Espa%C3%B1a#Figures-Temperature" title="Página Web meteorológica de referencia">es.weatherspark.es</a></p>
     </aside>            
 </body>
 </html>
