--- a/sobremi.html
+++ b/sobremi.html
@@ -19,33 +19,20 @@
 <body>
 
     <!--Cabecera-->
+
     <header>
         <h1>Escritorio Virtual</h1>
         <nav>
-            <ul>
-                <li>
-                    <a href="index.html" title="Índice" accesskey="I" tabindex="1">Inicio</a>
-                </li>
-                <li>
-                <a href="sobremi.html" title="Sobre mi" accesskey="S" tabindex="2">Sobre mi</a>
-                </li>
-                <li>
-                    <a href="noticias.html" title="Noticias" accesskey="N" tabindex="3">Noticias</a>
-                </li>
-                <li>
-                    <a href="agenda.html" title="Agenda" accesskey="A" tabindex="4">Agenda</a>
-                </li>
-                <li>
-                    <a href="meteorologia.html" title="Meteorología" accesskey="M" tabindex="5">Meteorología</a>
-                </li>
-                <li>
-                    <a href="viajes.html" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
-                </li>
-                <li>
-                    <a href="juegos.html" title="Juegos" accesskey="J" tabindex="7">Juegos</a>
-                </li>
-            </ul>
+            <a href="index.html" title="Índice" accesskey="I" tabindex="1">Inicio</a>
+            <a href="sobremi.html" title="Sobre mi" accesskey="S" tabindex="2">Sobre mi</a>
+            <a href="noticias.html" title="Noticias" accesskey="N" tabindex="3">Noticias</a>
+            <a href="agenda.html" title="Agenda" accesskey="A" tabindex="4">Agenda</a>
+            <a href="meteorologia.html" title="Meteorología" accesskey="M" tabindex="5">Meteorología</a>
+            <a href="viajes.html" title="Viajes" accesskey="V" tabindex="6">Viajes</a>
+            <a href="juegos.html" title="Juegos" accesskey="J" tabindex="7">Juegos</a>
+           
         </nav>
+
     </header>
     
     <!-- Datos con el contenidos que aparece en la sección principal -->
@@ -104,7 +91,7 @@
 
                     <p>A continuación, se muestra un vídeo del Rally Princesa de Asturias 2023:</p>
 
-                        <video controls preload>
+                        <video autoplay controls preload>
                             <source src="multimedia/videos/rally.mp4" type="video/mp4">
                             <source src="multimedia/videos/rally.webm" type="video/webm">
                         </video>
