--- a/sobremi.html
+++ b/sobremi.html
@@ -53,8 +53,9 @@
                     </picture>
 
                     <p>
-                        Bienvenidos: Mi nombre es Sergio Truébano,
-                        soy un estudiante del tercer curso de <a href="https://ingenieriainformatica.uniovi.es/infoacademica/grado">Ingeniería Informática del Software</a> en <a href="https://www.uniovi.es" title="Página Web de la Universidad de Oviedo">Universidad de Oviedo</a>.
+                        Bienvenidos: Mi nombre es Sergio Truébano, soy un estudiante del tercer curso de 
+                        <a href="https://ingenieriainformatica.uniovi.es/infoacademica/grado" title ="Página Web Escuela de Ingeniería Informática" tabindex="8">IngenieríaInformática del Software</a> 
+                        en <a href="https://www.uniovi.es" title="Página Web de la Universidad de Oviedo" tabindex="9">Universidad de Oviedo</a>.
                     </p>
                     <p>
                         Soy un aficionado a la informática que trata de acercar su realidad a la Web a través de un escritorio virtual.
@@ -91,7 +92,7 @@
 
                     <p>A continuación, se muestra un vídeo del Rally Princesa de Asturias 2023:</p>
 
-                        <video autoplay controls preload>
+                        <video autoplay controls preload tabindex="10">
                             <source src="multimedia/videos/rally.mp4" type="video/mp4">
                             <source src="multimedia/videos/rally.webm" type="video/webm">
                         </video>
@@ -119,7 +120,7 @@
 
                     <p>Fragmento de la canción Tanto la quería del grupo musical Andy & Lucas:</p>
 
-                    <audio controls> 
+                    <audio controls tabindex="11"> 
                         <source src="multimedia/audios/andylucas.mp3" type="audio/mp3">
                         <source src="multimedia/audios/andylucas.wav" type="audio/wav">
                         <source src="multimedia/audios/andylucas.ogg" type="audio/ogg">
@@ -129,7 +130,7 @@
             <section>
                 <h3>Asignaturas que más me han gusatdo hasta ahora del grado en Ingeniería Informática del Software</h3>
                     <p>Todas las asignaturas relaccionadas con mi grado se pueden ver en el 
-                        <a href="https://sies.uniovi.es/ofe-pod-jsf/web/oferta/seccion-5.faces" title="SIES: Plan de estudios para grado en Ingeniería Informática del Software">plan de estudios</a> de la Universidad de Oviedo</p>
+                        <a href="https://sies.uniovi.es/ofe-pod-jsf/web/oferta/seccion-5.faces" title="SIES: Plan de estudios para grado en Ingeniería Informática del Software" tabindex="12">plan de estudios</a> de la Universidad de Oviedo</p>
                     <dl>
                         <dt>Comunicación Persona Máquina</dt>
                             <dd>Interfaces en Java usando Swing y aplicando: usabilidad, adaptabilidad y accesibilidad</dd>
