Listo para computacion

--- a/sobremi.html
+++ b/sobremi.html
@@ -46,8 +46,8 @@
                     <p>Correo electrónico: UO289930@uniovi.es</p>
 
                     <picture>
-                        <source media="(max-width: 465px)" srcset="multimedia/imagenes/yo-285w.png"/>
-                        <source media="(max-width: 799px)" srcset="multimedia/imagenes/yo-466w.png"/>
+                        <source media="(max-width: 465px)" srcset="multimedia/imagenes/yo-150w.png"/>
+                        <source media="(max-width: 799px)" srcset="multimedia/imagenes/yo-378w.png"/>
                         <source media="(min-width: 800px)" srcset="multimedia/imagenes/yo.png"/>
                         <img src="multimedia/imagenes/yo.png" alt="Foto personal"/>
                     </picture>
@@ -112,8 +112,8 @@
                     <p>Foto del grupo Andy & Lucas:</p>
 
                     <picture>
-                        <source media="(max-width: 465px)" srcset="multimedia/imagenes/andylucas-284w.png"/>
-                        <source media="(max-width: 799px)" srcset="multimedia/imagenes/andylucas-466w.png"/>
+                        <source media="(max-width: 465px)" srcset="multimedia/imagenes/andylucas-150w.png"/>
+                        <source media="(max-width: 799px)" srcset="multimedia/imagenes/andylucas-378w.png"/>
                         <source media="(min-width: 800px)" srcset="multimedia/imagenes/andylucas.png"/>
                         <img src="multimedia/imagenes/andylucas.png" alt="No se ha podido mostrar la foto de Andy & Lucas"/>
                     </picture>
@@ -141,7 +141,7 @@
                         <dt>Metodología de la Programación</dt>
                             <dd>Inicio a las metodología de la programación en Java, pero aplicable a cualquier lenguaje de programación</dd>
                         <dt>Tecnologías y Paradigmas de la Programación</dt>
-                            <dd>Principales características de los lenguajes de programación, así como distintos paradigmos: orientado a objetos, funcional...</dd>
+                            <dd>Principales características de los lenguajes de programación, así como distintos paradigmas: procedimientos, orientado a objetos, funcional</dd>
                     </dl>
             </section>
     <!--</main>-->
